--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <h1>Asteroids</h1>
-  <canvas id="game" width="800" height="600"></canvas>
+  <canvas id="game"></canvas>
   <script src="game.js"></script>
 </body>
 </html>
