Refactor game engine and update docs

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <span id="status">Lives: 05&nbsp;&nbsp;Armor: |||||</span>
   </div>
   <canvas id="game"></canvas>
-  <script src="game.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
