--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     #score { float: left; }
     #status { float: right; }
     #timer { position: absolute; left: 50%; transform: translateX(-50%); }
-    canvas { background: #000; display: block; margin: auto; }
+    #game { background: #000; display: inline-block; }
+    #minimap { background: #000; display: inline-block; margin-left: 10px; }
     h1 { margin-bottom: 5px; }
+    .screen { position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; background: rgba(0,0,0,0.8); }
+    .screen.hidden { display: none; }
   </style>
 </head>
 <body>
@@ -22,7 +25,30 @@
     <span id="timer">[01:30]</span>
     <span id="status">Lives: 05&nbsp;&nbsp;Armor: |||||</span>
   </div>
-  <canvas id="game"></canvas>
+  <div id="wrapper">
+    <canvas id="game"></canvas>
+    <canvas id="minimap" width="150" height="150"></canvas>
+  </div>
+
+  <div id="menu" class="screen">
+    <button id="newGameBtn">Nowa gra</button>
+    <button id="settingsBtn">Ustawienia</button>
+    <button id="creditsBtn">Credits</button>
+  </div>
+  <div id="settingsScreen" class="screen hidden">
+    <h2>Ustawienia</h2>
+    <label>Rozmiar planszy <input id="worldSize" type="number" value="3000"></label><br>
+    <label>Promień statku <input id="shipSize" type="number" value="20"></label><br>
+    <label>Masa statku <input id="shipMass" type="number" value="5"></label><br>
+    <label>Czas rundy (s) <input id="roundTime" type="number" value="90"></label><br>
+    <button id="backBtn">Wróć</button>
+  </div>
+  <div id="creditsScreen" class="screen hidden">
+    <h2>Credits</h2>
+    <p>Stworzone z pomocą OpenAI Codex</p>
+    <button id="creditsBack">Wróć</button>
+  </div>
+
   <script type="module" src="main.js"></script>
 </body>
 </html>
