--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
   <title>Simple Asteroids Game</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap');
-    body { margin: 0; background: #000; color: #fff; font-family: 'Doto', sans-serif; text-align: center; }
+    body { margin: 0; background: #111; color: #fff; font-family: 'Doto', sans-serif; text-align: center; }
     #wrapper { display: flex; justify-content: center; }
     #game { background: #000; display: inline-block; }
     #sidebar { display: flex; flex-direction: column; margin-left: 10px; align-items: flex-start; }
     #topbar { width: 150px; text-align: left; padding: 4px 0; box-sizing: border-box; }
-    #score, #status, #timer { display: block; }
+    #score, #lives, #armor, #timer { display: block; }
     #minimap { background: #000; display: inline-block; margin-top: 5px; }
     h1 { margin-bottom: 5px; font-size: 48px; }
     button { font-family: 'Doto', sans-serif; font-size: 48px; margin: 10px; padding: 10px 20px; }
-    #footer { margin-top: 10px; font-size: 12px; color: #888; }
+    #footer { margin-top: 10px; font-size: 14px; color: #888; font-weight: bold; }
     .screen { position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; background: rgba(0,0,0,0.8); }
+    #menu { background: #000; overflow: hidden; }
+    #menuStars { position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; }
     .screen.hidden { display: none; }
   </style>
 </head>
@@ -27,14 +29,16 @@
     <div id="sidebar">
       <div id="topbar">
         <span id="score">Score: 00000</span>
-        <span id="timer">[01:30]</span>
-        <span id="status">Lives: 05&nbsp;&nbsp;Armor: |||||</span>
+        <span id="timer">[02:30]</span>
+        <span id="lives">Lives: 05</span>
+        <span id="armor">Armor: |||||</span>
       </div>
       <canvas id="minimap" width="150" height="150"></canvas>
     </div>
   </div>
 
   <div id="menu" class="screen">
+    <canvas id="menuStars"></canvas>
     <button id="newGameBtn">Nowa gra</button>
     <button id="settingsBtn">Ustawienia</button>
     <button id="creditsBtn">Credits</button>
@@ -44,9 +48,10 @@
     <label>Rozmiar planszy <input id="worldSize" type="number" value="3000"></label><br>
     <label>Promień statku <input id="shipSize" type="number" value="20"></label><br>
     <label>Masa statku <input id="shipMass" type="number" value="5"></label><br>
-    <label>Czas rundy (s) <input id="roundTime" type="number" value="90"></label><br>
+    <label>Czas rundy (s) <input id="roundTime" type="number" value="150"></label><br>
     <label>Min. asteroid <input id="minAst" type="number" value="10"></label><br>
     <label>Max. asteroid <input id="maxAst" type="number" value="100"></label><br>
+    <label>Max. planet <input id="maxPlanets" type="number" value="3"></label><br>
     <button id="backBtn">Wróć</button>
   </div>
   <div id="creditsScreen" class="screen hidden">
@@ -55,7 +60,7 @@
     <button id="creditsBack">Wróć</button>
   </div>
 
-  <div id="footer">Wersja 0.0.2</div>
+  <div id="footer"><strong>Wersja 0.0.3</strong></div>
 
   <script type="module" src="main.js"></script>
 </body>
