fix: improve local play and visuals

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Simple Asteroids Game</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap');
-    body { margin: 0; background: #111; color: #fff; font-family: 'Doto', sans-serif; text-align: center; }
+    body { margin: 0; background: #222; color: #fff; font-family: 'Doto', sans-serif; text-align: center; }
     #wrapper { display: flex; justify-content: center; }
     #game { background: #000; display: inline-block; }
     #sidebar { display: flex; flex-direction: column; margin-left: 10px; align-items: flex-start; }
@@ -62,6 +62,7 @@
 
   <div id="footer"><strong>Wersja 0.0.3</strong></div>
 
-  <script type="module" src="main.js"></script>
+  <script src="game.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
