--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     button { font-family: 'Doto', sans-serif; font-size: 48px; margin: 10px; padding: 10px 20px; }
     #footer { margin-top: 10px; font-size: 14px; color: #888; font-weight: bold; }
     .screen { position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; background: rgba(0,0,0,0.8); }
-    #menu { background: #000; overflow: hidden; }
-    #menuStars { position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; }
+    #menu { position: relative; background: rgba(0,0,0,0.8); overflow: hidden; }
+    #menuStars { position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 0; }
+    #menu button { position: relative; z-index: 1; }
     .screen.hidden { display: none; }
   </style>
 </head>
