Add alien enemies and improvements

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div id="topbar">
         <span id="score">Score: 00000</span>
         <span id="timer">Timer: [02:30]</span>
-        <span id="lives">Lives: 05</span>
+        <span id="lives">Lives: |||||</span>
         <span id="armor">Armor: |||||</span>
       </div>
       <canvas id="minimap" width="150" height="150"></canvas>
@@ -53,6 +53,7 @@
     <label>Min. asteroid <input id="minAst" type="number" value="10"></label><br>
     <label>Max. asteroid <input id="maxAst" type="number" value="100"></label><br>
     <label>Max. planet <input id="maxPlanets" type="number" value="3"></label><br>
+    <label>Max. przeciwników <input id="maxEnemies" type="number" value="0"></label><br>
     <button id="backBtn">Wróć</button>
   </div>
   <div id="creditsScreen" class="screen hidden">
@@ -61,7 +62,7 @@
     <button id="creditsBack">Wróć</button>
   </div>
 
-  <div id="footer"><strong>Wersja 0.0.3</strong></div>
+  <div id="footer"><strong>Wersja 0.0.4</strong></div>
 
   <script src="game.js"></script>
   <script src="main.js"></script>
