--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     <label>Min. asteroid <input id="minAst" type="number" value="10"></label><br>
     <label>Max. asteroid <input id="maxAst" type="number" value="100"></label><br>
     <label>Max. planet <input id="maxPlanets" type="number" value="3"></label><br>
-    <label>Max. przeciwników <input id="maxEnemies" type="number" value="0"></label><br>
+    <label>Min. przeciwników <input id="minEnemies" type="number" value="3"></label><br>
+    <label>Max. przeciwników <input id="maxEnemies" type="number" value="10"></label><br>
     <button id="backBtn">Wróć</button>
   </div>
   <div id="creditsScreen" class="screen hidden">
@@ -62,7 +63,7 @@
     <button id="creditsBack">Wróć</button>
   </div>
 
-  <div id="footer"><strong>Wersja 0.0.4</strong></div>
+  <div id="footer"><strong>Wersja 0.0.5</strong></div>
 
   <script src="game.js"></script>
   <script src="main.js"></script>
