Implement adjustable gravity and improve minimap

--- a/index.html
+++ b/index.html
@@ -46,15 +46,7 @@
   </div>
   <div id="settingsScreen" class="screen hidden">
     <h2>Ustawienia</h2>
-    <label>Rozmiar planszy <input id="worldSize" type="number" value="3000"></label><br>
-    <label>Promień statku <input id="shipSize" type="number" value="20"></label><br>
-    <label>Masa statku <input id="shipMass" type="number" value="5"></label><br>
-    <label>Czas rundy (s) <input id="roundTime" type="number" value="150"></label><br>
-    <label>Min. asteroid <input id="minAst" type="number" value="10"></label><br>
-    <label>Max. asteroid <input id="maxAst" type="number" value="100"></label><br>
-    <label>Max. planet <input id="maxPlanets" type="number" value="3"></label><br>
-    <label>Min. przeciwników <input id="minEnemies" type="number" value="3"></label><br>
-    <label>Max. przeciwników <input id="maxEnemies" type="number" value="10"></label><br>
+    <textarea id="settingsText" rows="14" cols="40"></textarea><br>
     <button id="backBtn">Wróć</button>
   </div>
   <div id="creditsScreen" class="screen hidden">
@@ -63,7 +55,7 @@
     <button id="creditsBack">Wróć</button>
   </div>
 
-  <div id="footer"><strong>Wersja 0.0.5</strong></div>
+  <div id="footer"><strong>Wersja 0.0.6</strong></div>
 
   <script src="game.js"></script>
   <script src="main.js"></script>
