Add enemy counter and shield feature

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <span id="timer">Timer: [02:30]</span>
         <span id="lives">Lives: |||||</span>
         <span id="armor">Armor: |||||</span>
+        <span id="enemies">Enemies: 0</span>
       </div>
       <canvas id="minimap" width="150" height="150"></canvas>
     </div>
