--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     #score, #lives, #armor, #timer { display: block; }
     #minimap { background: #000; display: inline-block; margin-top: 5px; }
     h1 { margin-bottom: 5px; font-size: 48px; }
+    #menuTitle { position: relative; z-index: 1; }
     button { font-family: 'Doto', sans-serif; font-size: 48px; margin: 10px; padding: 10px 20px; }
-    #footer { margin-top: 10px; font-size: 14px; color: #888; font-weight: bold; }
+    #footer { margin-top: 10px; font-size: 14px; color: #888; font-weight: bold;
+              position: fixed; bottom: 0; left: 0; width: 100%; z-index: 101; }
     .screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; background: #000; z-index: 100; }
     #menu { background: rgba(0,0,0,0.8); overflow: hidden; }
     #menuStars { position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 0; }
@@ -63,6 +65,7 @@
   <script src="https://fraigo.github.io/javascript-midi-player/midiplayer/MIDIFile.js"></script>
   <script src="https://fraigo.github.io/javascript-midi-player/midiplayer/MIDIPlayer.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.0/ace.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.0/mode-json5.js"></script>
   <script src="game.js"></script>
   <script src="main.js"></script>
 </body>
