--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP8/5/hPQAH/wM7fGNCAA==">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap');
-    body { margin: 0; background: #222; color: #fff; font-family: 'Doto', sans-serif; text-align: center; }
-    #wrapper { display: flex; justify-content: center; }
-    #game { background: #000; display: inline-block; }
-    #sidebar { display: flex; flex-direction: column; margin-left: 10px; align-items: flex-start; }
+    body { margin: 0; background: #222; color: #fff; font-family: 'Doto', sans-serif; text-align: center; overflow: hidden; }
+    #wrapper { position: relative; width: 100vw; height: 100vh; }
+    #game { background: #000; display: block; width: 100%; height: 100%; }
+    #sidebar { display: flex; flex-direction: column; align-items: flex-start; position: absolute; bottom: 10px; right: 10px; background: rgba(0,0,0,0.5); padding: 10px; border-radius: 8px; }
     #topbar { width: 150px; text-align: left; padding: 4px 0; box-sizing: border-box; }
     #score, #lives, #armor, #timer { display: block; }
     #minimap { background: #000; display: inline-block; margin-top: 5px; }
