--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     #menuStars { position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 0; }
     #menu button { position: relative; z-index: 1; }
     .screen.hidden { display: none; }
+    #mobileControls.hidden { display: none; }
+    #mobileControls { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 200; pointer-events: none; }
+    #mobileControls button { position: absolute; bottom: 20px; width: 80px; height: 80px; opacity: 0.5; background: #444; color: #fff; border: none; border-radius: 50%; font-size: 40px; pointer-events: auto; }
+    #mobileAccel { left: 20px; }
+    #mobileShoot { right: 20px; }
   </style>
 </head>
 <body>
@@ -40,6 +45,10 @@
         <span id="enemies">Enemies: 0</span>
       </div>
       <canvas id="minimap" width="150" height="150"></canvas>
+    </div>
+    <div id="mobileControls" class="hidden">
+      <button id="mobileAccel">▲</button>
+      <button id="mobileShoot">●</button>
     </div>
   </div>
 
@@ -100,6 +109,7 @@
   <script src="https://fraigo.github.io/javascript-midi-player/midiplayer/MIDIPlayer.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.0/ace.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.0/mode-json5.js"></script>
+  <script src="https://unpkg.com/shake.js@1.2.2/shake.js"></script>
   <script src="game.js"></script>
   <script src="main.js"></script>
 </body>
