--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     #menu button { position: relative; z-index: 1; }
     .screen.hidden { display: none; }
     #mobileControls.hidden { display: none; }
-    #mobileControls { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 200; pointer-events: none; }
-    #mobileControls button { position: absolute; bottom: 20px; width: 80px; height: 80px; opacity: 0.5; background: #444; color: #fff; border: none; border-radius: 50%; font-size: 40px; pointer-events: auto; }
-    #mobileAccel { left: 20px; }
-    #mobileShoot { right: 20px; }
+    #mobileControls { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 200; pointer-events: auto; }
+    #joystick { position: absolute; width: 80px; height: 80px; border-radius: 50%; background: rgba(255,255,255,0.1); left: 20px; bottom: 20px; pointer-events: none; transition: opacity 0.1s; }
+    #joystick.active { background: rgba(255,255,255,0.3); }
+    #stick { position: absolute; left: 50%; top: 50%; width: 40px; height: 40px; margin-left: -20px; margin-top: -20px; border-radius: 50%; background: rgba(255,255,255,0.3); pointer-events: none; }
   </style>
 </head>
 <body>
@@ -47,8 +47,7 @@
       <canvas id="minimap" width="150" height="150"></canvas>
     </div>
     <div id="mobileControls" class="hidden">
-      <button id="mobileAccel">▲</button>
-      <button id="mobileShoot">●</button>
+      <div id="joystick"><div id="stick"></div></div>
     </div>
   </div>
 
@@ -109,7 +108,6 @@
   <script src="https://fraigo.github.io/javascript-midi-player/midiplayer/MIDIPlayer.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.0/ace.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.0/mode-json5.js"></script>
-  <script src="https://unpkg.com/shake.js@1.2.2/shake.js"></script>
   <script src="game.js"></script>
   <script src="main.js"></script>
 </body>
