--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap');
     body { margin: 0; background: #222; color: #fff; font-family: 'Doto', sans-serif; text-align: center; overflow: hidden; }
-    #wrapper { position: relative; width: 100vw; height: 100vh; }
+    #wrapper { position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; }
     #game { background: #000; display: block; width: 100%; height: 100%; }
     #sidebar { display: flex; flex-direction: column; align-items: flex-start; position: absolute; bottom: 10px; right: 10px; background: rgba(0,0,0,0.5); padding: 10px; border-radius: 8px; }
     #topbar { width: 150px; text-align: left; padding: 4px 0; box-sizing: border-box; }
