--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
       background: rgba(255,255,255,0.2);
       pointer-events: none;
     }
+    body.mobile #topbar,
+    body.mobile #minimap {
+      transform: scale(0.75);
+      transform-origin: bottom right;
+    }
   </style>
 </head>
 <body>
