Add experimental WebRTC multiplayer skeleton

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
     <button id="aboutBtn">About</button>
     <button id="creditsBtn">Credits</button>
   </div>
+  <div id="modeScreen" class="screen hidden">
+    <h2>Select Mode</h2>
+    <button id="singleBtn">Single Player</button>
+    <button id="hostBtn">Multiplayer (Create)</button>
+    <button id="joinBtn">Multiplayer (Join)</button>
+  </div>
   <div id="settingsScreen" class="screen hidden">
     <h2>Settings</h2>
     <div id="settingsText" style="width:800px;height:600px;"></div>
