--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
   <script src="https://fraigo.github.io/javascript-midi-player/midiplayer/MIDIPlayer.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.0/ace.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.0/mode-json5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
   <script src="game.js"></script>
   <script src="main.js"></script>
 </body>
