--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap');
     body { margin: 0; background: #222; color: #fff; font-family: 'Doto', sans-serif; text-align: center; overflow: hidden; }
-    #wrapper { position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; }
+    #wrapper { position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; transition: transform 0.3s ease; }
     #game { background: #000; display: block; width: 100%; height: 100%; }
     #sidebar { display: flex; flex-direction: column; align-items: flex-start; position: absolute; bottom: 10px; right: 10px; background: rgba(0,0,0,0.5); padding: 10px; border-radius: 8px; }
     #topbar { width: 150px; text-align: left; padding: 4px 0; box-sizing: border-box; }
@@ -18,6 +18,8 @@
     h1 { margin-bottom: 5px; font-size: 48px; }
     #menuTitle { position: relative; z-index: 1; }
     button { font-family: 'Doto', sans-serif; font-size: 48px; margin: 10px; padding: 10px 20px; }
+    #shareOverlay textarea { width: 80%; height: 80px; overflow: auto; }
+    #shareOverlay button { font-size: 24px; margin: 5px; }
     .key { display:inline-block; border:1px solid #fff; border-radius:4px; padding:2px 6px; margin:0 2px; font-size:32px; }
     #footer { margin-top: 10px; font-size: 14px; color: #888; font-weight: bold;
               position: fixed; bottom: 0; left: 0; width: 100%; z-index: 101; }
@@ -71,13 +73,26 @@
         <span id="lives">Lives: |||||</span>
         <span id="armor">Armor: |||||</span>
         <span id="enemies">Enemies: 0</span>
+        <span id="ping">Ping: 0ms</span>
       </div>
       <canvas id="minimap" width="150" height="150"></canvas>
     </div>
-    <div id="mobileControls" class="hidden">
-      <div id="joystick"><div id="stick"></div></div>
+  <div id="mobileControls" class="hidden">
+    <div id="joystick"><div id="stick"></div></div>
+  </div>
+  <div id="shareOverlay" class="screen hidden">
+    <h2>Share Link</h2>
+    <textarea id="shareLink" readonly style="width:80%;height:80px;overflow:auto;"></textarea>
+    <div>
+      <button id="shortenBtn">Shorten</button>
+      <button id="copyLinkBtn">Copy</button>
+      <button id="waBtn">WhatsApp</button>
+      <button id="msgrBtn">Messenger</button>
+      <button id="smsBtn">SMS</button>
+      <button id="shareClose">Close</button>
     </div>
   </div>
+</div>
 
   <div id="menu" class="screen">
     <canvas id="menuStars"></canvas>
