Enhance multiplayer HUD and controls

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
   <div id="menu" class="screen">
     <canvas id="menuStars"></canvas>
     <h1 id="menuTitle">Asteroids</h1>
+    <button id="resumeBtn" class="hidden">R&#xC9;SUM&#xC9;</button>
     <button id="newGameBtn">New Game</button>
     <button id="settingsBtn">Settings</button>
     <button id="controlsBtn">Controls</button>
