--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     body { margin: 0; background: #222; color: #fff; font-family: 'Doto', sans-serif; text-align: center; overflow: hidden; }
     #wrapper { position: absolute; top: 10px; left: 10px; right: 10px; bottom: 10px; transition: transform 0.3s ease; perspective: 800px; }
     #game { background: #000; display: block; width: 100%; height: 100%; transform-origin: bottom center; transform: rotateX(30deg); }
-    #sidebar { display: flex; flex-direction: column; align-items: flex-start; position: absolute; bottom: 10px; right: 10px; background: rgba(0,0,0,0.5); padding: 10px; border-radius: 8px; }
-    #topbar { width: 150px; text-align: left; padding: 4px 0; box-sizing: border-box; }
-    #score, #lives, #armor, #timer { display: block; }
-    #minimap { background: #000; display: inline-block; margin-top: 5px; }
+    #sidebar { display: flex; flex-direction: row; align-items: center; position: absolute; top: 0; left: 0; right: 0; background: rgba(0,0,0,0.5); padding: 8px 10px; border-radius: 0 0 8px 8px; }
+    #topbar { display: flex; flex-direction: row; text-align: left; padding: 0 10px 0 0; box-sizing: border-box; }
+    #topbar span { margin-right: 12px; display: inline-block; }
+    #minimap { background: #000; display: inline-block; margin-left: auto; }
     h1 { margin-bottom: 5px; font-size: 48px; }
     #menuTitle { position: relative; z-index: 1; }
     button { font-family: 'Doto', sans-serif; font-size: 48px; margin: 10px; padding: 10px 20px; }
