--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div id="swipeHandle" class="hidden"></div>
 
   <div id="shareOverlay" class="screen hidden">
-    <h2>Share Link</h2>
+    <h2>Share Code</h2>
     <textarea id="shareLink" readonly style="width:80%;height:80px;overflow:auto;"></textarea>
     <div>
       <button id="shortenBtn">Shorten</button>
